dropshot/tests/fail/bad_endpoint15.stderr
error: future cannot be sent between threads safely
  --> tests/fail/bad_endpoint15.rs:13:1
   |
13 | / #[endpoint {
14 | |     method = GET,
15 | |     path = "/test",
16 | | }]
   | |__^ future returned by `bad_endpoint` is not `Send`
   |
   = help: within `impl Future<Output = Result<HttpResponseOk<i32>, HttpError>>`, the trait `Send` is not implemented for `Rc<i32>`
note: future is not `Send` as this value is used across an await
  --> tests/fail/bad_endpoint15.rs:21:5
   |
20 |     let non_send_type = Rc::new(0);
   |         ------------- has type `Rc<i32>` which is not `Send`
21 |     tokio::time::sleep(Duration::from_millis(1)).await;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ await occurs here, with `non_send_type` maybe used later
22 |     Ok(HttpResponseOk(*non_send_type))
23 | }
   | - `non_send_type` is later dropped here
note: required by a bound in `future_endpoint_must_be_send`
  --> tests/fail/bad_endpoint15.rs:13:1
   |
13 | / #[endpoint {
14 | |     method = GET,
15 | |     path = "/test",
16 | | }]
   | |__^ required by this bound in `future_endpoint_must_be_send`
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Arc<RequestContext<()>>) -> impl Future<Output = Result<HttpResponseOk<i32>, HttpError>> {<impl From<bad_endpoint> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint15.rs:17:10
   |
13 | / #[endpoint {
14 | |     method = GET,
15 | |     path = "/test",
16 | | }]
   | |__- required by a bound introduced by this call
17 |   async fn bad_endpoint(
   |            ^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for `fn(Arc<RequestContext<()>>) -> impl Future<Output = Result<HttpResponseOk<i32>, HttpError>> {<impl From<bad_endpoint> for ApiEndpoint<<Arc<RequestContext<()>> as RequestContextArgument>::Context>>::from::bad_endpoint}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
